Fix nav alignment, cleanup import

--- a/src/styles.css
+++ b/src/styles.css
@@ -124,3 +124,11 @@ a:visited {
   display: block; 
   text-align: center; 
 }
+
+.previous-button {
+    left: 2rem;
+}
+
+.next-button {
+    right: 2rem;
+}
